# candle-qwen-2-5

./: .gitignore  Cargo.toml  ISSUES_FOUND_AND_FIXED.md  README.md  REFACTORING_SUMMARY.md  SIMPLIFIED_ARCHITECTURE.md  justfile
app/: Cargo.toml  justfile
app/src/: main.rs
candle-qwen2-5-cli/: Cargo.toml
candle-qwen2-5-cli/src/: main.rs
candle-qwen2-5-core/: Cargo.toml
candle-qwen2-5-core/src/: lib.rs
crates/api-server/: Cargo.toml  README.md  justfile
crates/api-server/src/: main.rs
crates/app/: AGENTS.md  Cargo.toml  LICENSE_FONTS.md  README.md  justfile
crates/app/assets/: kitchen_sink.dot  simple.dot
crates/app/src/: main.rs
crates/app/src/components/: chat_view.rs  dot_display.rs  mod.rs
crates/app/src/components/dot_display/: render.rs
crates/app/src/modules/: api_client.rs  mod.rs  server_manager.rs
crates/candle-embeddings/: Cargo.toml
crates/candle-embeddings/src/: embeddings.rs  error.rs  lib.rs  model.rs  model_args.rs
crates/candle-qwen2-5-cli/: Cargo.toml  instr.txt  justfile
crates/candle-qwen2-5-cli/src/: main.rs
crates/candle-qwen2-5-core/: Cargo.toml
crates/candle-qwen2-5-core/src/: lib.rs
crates/graph-assistant/: Cargo.toml  README.md
crates/graph-assistant/examples/: print_dot_nodes.rs
crates/graph-assistant/src/: lib.rs  main.rs  sanitize.rs
crates/graph-delta/: Cargo.toml  README.md  justfile
crates/graph-delta/examples/: basic.rs  crud.rs  debug_parser.rs  dsl_editor.rs  html_label.rs  kitchen_sink.rs  llm_editor.rs  simple_llm_editor.rs  test_parsing.rs
crates/graph-delta/src/: commands.rs  dot.pest  lib.rs  parser.rs  tool.rs
crates/graph-delta/src/dot_chunks/: commands.rs  dot.pest  parser.rs
crates/graph-delta/src/dsl/: ast.rs  few-shot.txt  graphdsl.pest  interpreter.rs  mod.rs  parser.rs  prompt.txt
crates/graph-delta/tests/: parser_tests.rs  stress_test.rs
crates/graph-delta/tests/fixtures/: k2.dot  kitchen_sink.dot  simple_example.dot
src/: lib.rs  main.rs
