[package]
name = "candle-qwen2-5"
version = "0.1.0"
edition = "2021"

[lib]
name = "candle_qwen2_5"
path = "src/lib.rs"

[[bin]]
name = "candle-qwen2-5"
path = "src/main.rs"
bench = false
test = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
candle = { version = "0.9.1", package = "candle-core" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.4.3"
log = "0.4"
num-traits = "0.2.15"
safetensors = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0"
tokenizers = { version = "0.19.1", default-features = false, features = [
  "fancy-regex",
  "onig",
] }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"


# features are mkl and "accelerate" depending on platform
[target.'cfg(target_os = "macos")'.dependencies]
candle = { version = "0.9.1", package = "candle-core", features = [
  "accelerate",
] }
candle-nn = { version = "0.9.1", features = ["accelerate"] }
candle-transformers = { version = "0.9.1", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
# We are disabling mkl for now to avoid linking issues.
# candle = { version = "0.9.1", package = "candle-core", features = ["mkl"] }
# candle-nn = { version = "0.9.1", features = ["mkl"] }
# candle-transformers = { version = "0.9.1", features = ["mkl"] }
