[package]
name = "app"
version = "0.1.0"
authors = ["Douglas Anderson <douganderson444@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-logger = "0.7.1"
candle-qwen2-5-core = { path = "../candle-qwen2-5-core" }
tokio = { workspace = true, features = ["full"] }
anyhow = "1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
