[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-qwen2-5-core = { path = "../candle-qwen2-5-core" }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
