[package]
name = "app"
version = "0.1.0"
authors = ["Douglas Anderson <douganderson444@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-logger = "0.7.1"
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
