[package]
name = "app"
version = "0.1.0"
authors = ["Douglas Anderson <douganderson444@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.1"
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
graphvizm = { git = "https://github.com/DougAnderson444/graphvism.git" }
roxmltree = "0.21.1"
roughr = { version = "0.12.0", optional = true }
num-traits = { version = "0.2", optional = true }
euclid = { version = "0.22", optional = true }

[features]
default = ["desktop", "rough"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
rough = ["roughr", "num-traits", "euclid"]
