[package]
name = "candle-qwen2-5-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle-qwen2-5-cli"
path = "src/main.rs"

[dependencies]
candle-qwen2-5-core = { path = "../candle-qwen2-5-core" }
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
