[package]
name = "candle-qwen2-5-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
hf-hub = "0.4.3"
log = "0.4"
num-traits = "0.2.15"
safetensors = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "2.0"
tokenizers = { version = "0.19.1", default-features = false, features = [
  "fancy-regex",
  "onig",
] }
tracing = "0.1"

candle = { version = "0.9.1", package = "candle-core" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }

[features]
default = []
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = [
  "candle/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
