[package]
name = "graph-delta"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
schemars = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["full"], optional = true }
candle-qwen2-5-core = { path = "../candle-qwen2-5-core", optional = true }

[features]
default = []
llm = ["dep:candle-qwen2-5-core", "dep:tokio"]

[[example]]
name = "llm_editor"
path = "examples/llm_editor.rs"
required-features = ["llm"]
